--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
         <label for="coffee-search" class="d-block font-weight-bold">Coffee Name</label>
         <input id="coffee-search" type="search" class="d-block form-control mb-3">
         <input id="submit" type="submit" class="btn btn-primary btn-block"/>
-    </form>
+<!--code below is for bonus-->
+            <hr class="d-flex mb-4">
+            <h3 class="text-center">Add a Coffee</h3>
+            <label for="bonus-roast-selection" class="d-block font-weight-bold">Roast</label>
+            <select id="bonus-roast-selection" class="d-block form-control mb-3">
+                <option>light</option>
+                <option>medium</option>
+                <option>dark</option>
+            </select>
+            <label for="bonus-coffee-input" class="d-block font-weight-bold">Coffee Name</label>
+            <input id="bonus-coffee-input" type="search" class="d-block form-control mb-3">
+            <input id="add" type="submit" class="btn btn-primary btn-block" onclick="bonus()"/>
+        </form>
     </div> <!--close div for row w all coffees and forms-->
 
 <!--    <table>-->
