updated: add coffee feature, minor edits

--- a/index.html
+++ b/index.html
@@ -29,30 +29,21 @@
         <input id="coffee-search" type="search" class="d-block form-control mb-3">
         <input id="submit" type="submit" class="btn btn-primary btn-block"/>
 <!--code below is for bonus-->
-            <hr class="d-flex mb-4">
-            <h3 class="text-center">Add a Coffee</h3>
-            <label for="bonus-roast-selection" class="d-block font-weight-bold">Roast</label>
-            <select id="bonus-roast-selection" class="d-block form-control mb-3">
-                <option>light</option>
-                <option>medium</option>
-                <option>dark</option>
-            </select>
-            <label for="bonus-coffee-input" class="d-block font-weight-bold">Coffee Name</label>
-            <input id="bonus-coffee-input" type="search" class="d-block form-control mb-3">
-            <input id="add" type="submit" class="btn btn-primary btn-block" onclick="bonus()"/>
-        </form>
-    </div> <!--close div for row w all coffees and forms-->
+        <hr class="d-flex mb-4">
+        <h3 class="text-center">Add a Coffee</h3>
+        <label for="bonus-roast-selection" class="d-block font-weight-bold">Roast</label>
+        <select id="bonus-roast-selection" class="d-block form-control mb-3">
+            <option>light</option>
+            <option>medium</option>
+            <option>dark</option>
+        </select>
+        <label for="bonus-coffee-input" class="d-block font-weight-bold">Coffee Name</label>
+        <input id="bonus-coffee-input" type="search" class="d-block form-control mb-3">
+        <input id="add" type="submit" class="btn btn-primary btn-block"/>
 
-<!--    <table>-->
-<!--        <thead>-->
-<!--            <tr>-->
-<!--                <th>ID</th>-->
-<!--                <th>NAME</th>-->
-<!--                <th>ROAST</th>-->
-<!--            </tr>-->
-<!--        </thead>-->
-<!--        <tbody id="coffees"></tbody>-->
-<!--    </table>-->
+        <div id="output-coffee"></div>
+    </form>
+    </div> <!--close div for row w all coffees and forms-->
 
 </div> <!--close div container-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
