--- a/index.html
+++ b/index.html
@@ -4,48 +4,61 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Birthstone&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="container">
-    <h1 class="text-center">Coffee!</h1>
+    <h1 class="text-center display-1">Coffee!</h1>
 
-    <hr>
+    <hr id="below-coffee">
 
     <div class="row">
-        <div class="col-6">
+        <div class="col-6" id="displayed-coffees">
             <div id="coffees" class="d-flex flex-wrap"></div>
         </div>
 
     <form class="col-6">
-        <label for="roast-selection" class="d-block font-weight-bold">Roast</label>
+        <label for="roast-selection" class="d-block mt-3">Roast</label>
         <select id="roast-selection" class="d-block form-control mb-3">
             <option>all</option>
             <option>light</option>
             <option>medium</option>
             <option>dark</option>
         </select>
-        <label for="coffee-search" class="d-block font-weight-bold">Coffee Name</label>
+        <label for="coffee-search" class="d-block">Coffee Name</label>
         <input id="coffee-search" type="search" class="d-block form-control mb-3">
-        <input id="submit" type="submit" class="btn btn-primary btn-block"/>
+        <input id="submit" type="submit" class="btn btn-block"/>
 <!--code below is for bonus-->
-        <hr class="d-flex mb-4">
-        <h3 class="text-center">Add a Coffee</h3>
-        <label for="bonus-roast-selection" class="d-block font-weight-bold">Roast</label>
+        <hr class="d-flex mb-2">
+        <h3 class="text-center display-4 mb-0 mx-auto">Add a Coffee</h3>
+        <label for="bonus-roast-selection" class="d-block">Roast</label>
         <select id="bonus-roast-selection" class="d-block form-control mb-3">
             <option>light</option>
             <option>medium</option>
             <option>dark</option>
         </select>
-        <label for="bonus-coffee-input" class="d-block font-weight-bold">Coffee Name</label>
+        <label for="bonus-coffee-input" class="d-block">Coffee Name</label>
         <input id="bonus-coffee-input" type="search" class="d-block form-control mb-3">
-        <input id="add" type="submit" class="btn btn-primary btn-block"/>
+        <input id="add" type="submit" class="btn btn-block mb-3"/>
 
         <div id="output-coffee"></div>
     </form>
     </div> <!--close div for row w all coffees and forms-->
 
+    <footer class="small">
+        <div class="row m-5">
+            <div class="col-6 text-right">&copy; 2021 All Rights Reserved</div>
+            <div class="col-6 text-left">123 Coffee Ave, Coffeeville, TX 54321</div>
+        </div>
+    </footer>
 </div> <!--close div container-->
+<video autoplay muted loop class="coffee-vid">
+    <source src="img/pexels-ron-lach-6938926.mp4">
+</video>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
