--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Jo White and the Seven Gits</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="text-center display-1">Coffee!</h1>
+    <h1 class="text-center display-1">Jo White Coffee!</h1>
 
     <hr id="below-coffee">
 
@@ -56,6 +56,7 @@
         </div>
     </footer>
 </div> <!--close div container-->
+
 <video autoplay muted loop class="coffee-vid">
     <source src="img/pexels-ron-lach-6938926.mp4">
 </video>
